src/style.scss
// Copyright (c) Alaska Air. All right reserved. Licensed under the Apache-2.0 license
// See LICENSE in the project root for license information.

// ---------------------------------------------------------------------

// Creates ods-inputtext CSS UI definition of shape

// Boilerplate Sass imports
@import "./node_modules/@alaskaairux/orion-design-tokens/dist/tokens/TokenVariables";
@import "./tokens/componentShapeVariables";

@import "./node_modules/@alaskaairux/orion-design-tokens/dist/tokens/TokenProperties";
@import "./tokens/componentShapeProperties";

@import "./node_modules/@alaskaairux/orion-web-core-style-sheets/dist/breakpoints";
@import "./node_modules/@alaskaairux/orion-web-core-style-sheets/dist/baselineLTE";

// container styles - defines the look of the outer custom componet
:host {
  position: relative;
  display: block;
}

// layout styles - define any layout specifications for UI that is contained WITHIN the component
// never define layout that would cause effect on element ouside the scope of this component


.inputText {
  border: 0 solid var(--color-base-shark);
  border-radius: 0;
  border-width: 0 0 var(--border-width-thin);
  padding: var(--size-scale-xl) var(--size-scale-lg) var(--size-scale-sml) 0;
  position: relative;
  transition: all 0.3s cubic-bezier(0.215, 0.61, 0.355, 1);
  width: 100%;
  font-size: var(--size-breakpoint-all-med);
  caret-color: var(--color-brand-blue-atlas-base);

  &:focus {
    border-color: var(--color-brand-blue-atlas-base);
    & ~ .iconContainer {
      background: none;

      .iconButton {
        opacity: 1;
        z-index: auto;
      }
    }
  }

  &:focus,
  &--filled {
    & + .inputText-label {
      font-size: 0.875rem;
      padding: var(--size-scale-sml) 0 0;
    }
  }

  &.error {
    border-color: var(--color-base-chili);
    caret-color: var(--color-base-chili);
  }

  &:disabled {
    background: none;
    border-color: var(--color-type-disabled);
    color: var(--color-type-disabled);
  }

  &:invalid {
    box-shadow: none;
  }
}

.inputText-label {
  color: var(--color-base-shark);
  left: 0;
  top: 0;
  pointer-events: none;
  position: absolute;
  transition: all 0.3s cubic-bezier(0.215, 0.61, 0.355, 1);
  padding: var(--size-scale-xl) 0 0;
}

.inputText-helpText {
  font-size: 0.875rem;
  color: var(--color-base-shark);
  margin: var(--size-scale-micro) 0;

  &.error {
    color: var(--color-base-chili);
  }
}

.inputText-icon {
  position: absolute;
  right: 0;
  padding: 0;
  pointer-events: auto;
}

.alertIcon {
  color: var(--color-base-chili);
}

.iconButton {
  background: none;
  border: none;

  opacity: 0;
  z-index: -1;

  &:active {
    opacity: 1;
    z-index: auto;
  }

  &:hover {
    cursor: pointer;
  }
}

.iconContainer {
  background: linear-gradient(-90deg, rgb(255, 255, 255) 0%, rgb(255, 255, 255) 50%, rgba(255, 255, 255, 0) 73%, rgba(255, 255, 255, 0) 100%);
  position: absolute;
  right: 0;
  top: var(--size-scale-xl);
  height: var(--size-scale-lg);
  width: var(--size-scale-xxl);
  pointer-events: none;
}

.is-disabled {
  color: var(--color-type-disabled);
}

